# holochain-fridgenote

./: .gitignore  LICENSE  app.json  conductor-config.toml
fridgenote_zome/: zome.json
fridgenote_zome/code/: .hcbuild  Cargo.toml
test/: index.js
zomes/note/: zome.json
zomes/note/code/: .hcbuild  Cargo.toml  conductor-config.toml
zomes/note/code/src/: lib.rs
