[package]
name = "fridgenote_zome"
version = "0.1.0"
authors = ["rpigu-i <8628078+rpigu-i@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.33-alpha5" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.33-alpha5" }
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
